# beacon-lambda

./: .gitignore  Cargo.toml  README.md  cdk.json  package-lock.json  package.json  test-invoke-remote-lambda.sh
application/: elsa-data-beacon-lambda-stack.ts
application/lambda/beacon/: Cargo.toml  Dockerfile
application/lambda/beacon/src/: lib.rs  main.rs
