[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.3.0"
log = "0.4.14"
serde = "1.0.126"
simple_logger = "1.11.0"
tokio = "1.6.1"
# Noodles
noodles = { version = "0.29.0", features = ["core", "bgzf", "csi", "tabix", "vcf"] }
noodles-vcf = { version = "0.21.0", features = ["async"] }
noodles-tabix = { version = "0.14.0", features = ["async"] }
noodles-bgzf = { version = "0.17.0", features = ["async"] }
# Amazon S3
bytes = { version = "1.2" }
aws-sdk-s3 = { version = "0.19" }
aws-config = { version = "0.49" }
