[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
serde = "1.0"
tokio = "1.21"
futures = "0.3"

noodles = { version = "0.29", features = ["bgzf", "tabix", "vcf"] }
noodles-vcf = { version = "0.21", features = ["async"] }

htsget-search = { git = "https://github.com/umccr/htsget-rs.git" }

lambda_runtime = "0.7"
aws-sdk-s3 = { version = "0.21" }
aws-config = { version = "0.51" }
